--- a/stats.html
+++ b/stats.html
@@ -231,6 +231,7 @@
               <li>Clarkson Mirror Started: October 2002</li>
               <li>Current Mirror booted up for first time: April 2016</li>
               <li>1.0PB reached on New Mirror: January 5, 2018 at 6pm EST</li>
+              <li>2.0PB reached on New Mirror: October 18, 2018 at 4pm EST</li>
             </div>
           </div>
           <div class="stats-card">
