fixed spelling of 'help the new mirror possible' to something more sensibe (and adding small bit about it being the newest iteration of the mirror)

--- a/history.html
+++ b/history.html
@@ -94,7 +94,7 @@
     </div>
     <div class="container">
       <h1>Sponsors</h1>
-      <p>We would like to thank everyone that helped out contributing to help the new mirror possible, including:</p>
+      <p>We would like to thank everyone that helped out contributing to help make the newest iteration of the mirror possible, including:</p>
       <ul class="center" style="list-style-type: none;">
         <li>Eric Busse</li>
         <li>Ted Champagne</li>
