Added Temple-OS to Software
Since Temple-OS is a descendant of MS-DOS not Unix Temple-OS should be moved to the same place as MS-DOS

--- a/software.html
+++ b/software.html
@@ -135,6 +135,8 @@
               <a href="#tdf">LibreOffice</a>
             </li>
             <li>
+              <a hred="#temple-os">Temple-OS</a>
+            <li>
               <a href="#vlc">VLC</a>
             </li>
           </ul>
@@ -313,6 +315,15 @@
             <br>
             <h5>Homepage:</h5>
             <a href="http://www.documentfoundation.org/">http://www.documentfoundation.org/</a>
+          </section>
+          <section id="templeos">
+            <h3>TempleOS</h3>
+            <h5>HTTP:</h5>
+            <a href="./templeos/">http://mirror.clarkson.edu/templeos/</a>
+            <br>
+            <br>
+            <h5>Homepage:</h5>
+            <a href="http://templeos.org/">http://templeos.org/</a>
           </section>
           <section id="vlc">
             <h3>VLC (Offical Mirror)</h3>
