--- a/history.html
+++ b/history.html
@@ -125,7 +125,7 @@
       <div class="row">
         <div class="col col--4-of-4">
           <h4>
-            <a href="http://cosi.clarkson.edu">Clarkson Open Source Institute</a> | Design by Benjamin Lannon | Mirror Contact: newmanre@clarkson.edu |
+            <a href="http://cosi.clarkson.edu">Clarkson Open Source Institute</a> | Design by Benjamin Lannon | Mirror Contact: weinfuc@clarkson.edu thajohns@clarkson.edu stewarrt@clarkson.edu |
             <a href="https://github.com/COSI-Lab/MirrorWebsite">GitHub Repository</a>
           </h4>
         </div>
