Updating contact info

--- a/stats.html
+++ b/stats.html
@@ -287,7 +287,7 @@
         <div class="col col--4-of-4">
           <h4>
             <a href="http://cosi.clarkson.edu">Clarkson Open Source Institute</a> | Design by Benjamin Lannon | Mirror
-            Contact: weinfuc@clarkson.edu thajohns@clarkson.edu stewarrt@clarkson.edu |
+            Contact: weinfuc@clarkson.edu thajohns@clarkson.edu |
             <a href="https://github.com/COSI-Lab/MirrorWebsite">GitHub Repository</a>
           </h4>
         </div>
