--- a/stats.html
+++ b/stats.html
@@ -232,10 +232,11 @@
               <li>Current Mirror booted up for first time: April 2016</li>
               <li>1.0PB reached on New Mirror: January 5, 2018 at 6pm EST</li>
               <li>2.0PB reached on New Mirror: October 18, 2018 at 4pm EST</li>
+              <li>5.0PB reached on New Mirror: July 12, 2020 at 8pm EST</li>
             </div>
           </div>
           <div class="stats-card">
-            <h2>Path to 5PB</h2>
+            <h2>Path to 7.5PB</h2>
             <div id="pb-container">
               <div class="progressbar">
                 <div class="progressbar--filled"></div>
