fixed a spelling error preventing temple os to be clicked on the side bar.

--- a/software.html
+++ b/software.html
@@ -135,7 +135,7 @@
               <a href="#tdf">LibreOffice</a>
             </li>
             <li>
-              <a hred="#temple-os">Temple-OS</a>
+              <a href="#temple-os">Temple-OS</a>
             <li>
               <a href="#vlc">VLC</a>
             </li>
